test/sema/negative/super_traits3.impala
trait T {
    fn f(self: Self) -> ();
}
trait U {
    fn f(self: Self) -> ();
}
trait V : T, U {}
