test/sema/negative/super_traits3.out
super_traits3.impala:7 col 1 - 17: error: conflicting method name in super traits: 'f'
